# monstick-firmware

./: .gitignore  LICENSE  Makefile  README.md  default.conf  default.nix  monstick.cabal  shell.nix  user.conf.sample
app/: Logger.hs  Lorawan.hs
src/Monstick/: Platforms.hs  Types.hs  VT100.hs
src/Monstick/App/: Logger.hs  Lorawan.hs
src/Monstick/Test/: ADS.hs  Blink.hs  Heater.hs  RFM.hs  RFMInit.hs  RFMLoopback.hs  RadioCommand.hs  UARTBridge.hs
test/: ADS.hs  Blink.hs  Heater.hs  RFM.hs  RFMInit.hs  RFMLoopback.hs  RadioCommand.hs  UARTBridge.hs
