name:                monstick
version:             0.1.0.0
synopsis:            Monstick firmware
-- description:
license:             BSD3
author:              hexamon.tech
maintainer:          srk@48.io
copyright:           2019 hexamon.tech
category:            Embedded
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Monstick.App.Logger
                       Monstick.App.Lorawan
                       Monstick.Test.ADS
                       Monstick.Test.Blink
                       Monstick.Test.Heater
                       Monstick.Test.RadioCommand
                       Monstick.Test.RFM
                       Monstick.Test.RFMInit
                       Monstick.Test.RFMLoopback
                       Monstick.Test.UARTBridge
                       Monstick.VT100
                       Monstick.Platforms
                       Monstick.Platforms.Types
                       Monstick.Platforms.Monstick
                       Monstick.Types

  build-depends:       base
                     , ansi-terminal
                     , monadLib
                     , ivory
                     , ivory-serialize
                     , ivory-stdlib
                     , ivory-hw
                     , tower
                     , tower-config
                     , tower-hal
                     , tower-freertos-stm32
                     , ivory-bsp-stm32
                     , ivory-tower-base
                     , ivory-tower-cayenne
                     , ivory-tower-lorawan
                     , ivory-tower-drivers
                     , ivory-tower-helloworld

  default-language:    Haskell2010
  ghc-options:         -Wall

executable logger-gen
  main-is:             Logger.hs
  hs-source-dirs:      app
  build-depends:       base
                     , monstick
  ghc-options:          -Wall

executable lorawan-gen
  main-is:             Lorawan.hs
  hs-source-dirs:      app
  build-depends:       base
                     , monstick
  ghc-options:          -Wall

-- Tests

executable ads-test-gen
  main-is:             ADS.hs
  hs-source-dirs:      test
  build-depends:       base
                     , monstick
  ghc-options:          -Wall

executable blink-test-gen
  main-is:             Blink.hs
  hs-source-dirs:      test
  build-depends:       base
                     , monstick
  ghc-options:          -Wall

executable heater-test-gen
  main-is:             Heater.hs
  hs-source-dirs:      test
  build-depends:       base
                     , monstick
  ghc-options:          -Wall

executable radiocommand-test-gen
  main-is:             RadioCommand.hs
  hs-source-dirs:      test
  build-depends:       base
                     , monstick
  ghc-options:          -Wall

executable rfm-test-gen
  main-is:             RFM.hs
  hs-source-dirs:      test
  build-depends:       base
                     , monstick
  ghc-options:          -Wall

executable rfm-init-test-gen
  main-is:             RFMInit.hs
  hs-source-dirs:      test
  build-depends:       base
                     , monstick
  ghc-options:          -Wall

executable rfm-loopback-test-gen
  main-is:             RFMLoopback.hs
  hs-source-dirs:      test
  build-depends:       base
                     , monstick
  ghc-options:          -Wall

executable uartbridge-test-gen
  main-is:             UARTBridge.hs
  hs-source-dirs:      test
  build-depends:       base
                     , monstick
  ghc-options:          -Wall
